--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,6 @@ org.gradle.caching=true
 #Android
 android.nonTransitiveRClass=true
 android.useAndroidX=true
+
+#https://youtrack.jetbrains.com/issue/KT-42254
+kotlin.native.cacheKind=none
